--- a/MetodoGetGoEjemploGithub.html
+++ b/MetodoGetGoEjemploGithub.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="refresh" content="0; url=https://github.com/cytelsystem/Go/tree/EjemploMetodoCRUD">
-  <title>Document</title>
+  <meta http-equiv="refresh" content="0; url=https://github.com/cytelsystem/Go/tree/metodoPost">
+  <title>Metodo Post</title>
 </head>
 <body>
 
