--- a/HTMLInfrsaIITerraformHoradePracticarPlugins.html
+++ b/HTMLInfrsaIITerraformHoradePracticarPlugins.html
@@ -4,8 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¡Hora de practicar!</title>
+
+    <style>
+
+      .contenedor {
+        margin-left: 10em;
+        margin-right: 10em;
+      }
+      /* Estilo para los puntos de la lista */
+      ul {
+          list-style-type: none;
+          padding-left: 20px;
+      }
+
+      li {
+            font-size: 1em;
+        }
+
+      li::before {
+          content: "•";
+          color: red;
+          display: inline-block;
+          width: 1em;
+          /* margin-left: -1em; */
+          font-size: 2em;
+      }
+  </style>
+
 </head>
 <body>
+  <div class="contenedor">
+
     <h1>¡Hora de practicar!</h1>
     <p>Ya hemos levantado un VPC y una instancia EC2 en AWS con Terraform. Ahora es el momento de crear un ambiente más similar a lo que podríamos encontrar en la vida real:</p>
 
@@ -25,5 +54,6 @@
     <p>¿Te acordás cómo realizaste un ambiente en AWS? Ahora —y aprovechando las bondades de HCL— vas a programar código para poder replicar ese ambiente y administrar toda tu infraestructura Cloud sin necesidad de utilizar la consola web de AWS.</p>
 
     <iframe src="https://benjumeacarlos981.github.io/glosariodeterminos/PPTinfraestructuradelavidarealTerraform.pdf" id="BasiBlockIframe756a6e59-d57b-4516-8325-5ef2f56a52c7" class="basic-block-content__content" width="100%" height="538vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
+  </div>
 </body>
 </html>
