--- a/infraIIpipelinebuildPrincipioInmutabilidadPPt.html
+++ b/infraIIpipelinebuildPrincipioInmutabilidadPPt.html
@@ -38,11 +38,11 @@
     <h1>Bonus: El principio de inmutabilidad</h1>
     <br>
     <p>Inmutabilidad: “sin mutaciones”, “sin cambios”. En el sentido de DevOps, significa que una vez que creamos un artefacto —ya sea una imagen de contenedor o un paquete de código compilado— no debería ser necesario modificarlo. Y si se requieren cambios, se creará una nueva versión del objeto.</p>
-    <p><span>¿Por qué nos resulta útil que un objeto o artefacto sea inmutable?</span>Porque cuando lo copiamos —por ejemplo, desde un entorno de desarrollo a la producción— ya sabemos cómo se va a comportar. No solo el artefacto tiene que ser inmutable para que funcione bien en todos los entornos, o ambientes, sino también la infraestructura. ¡Veámoslo en un ejemplo!</p>
+    <p><strong>¿Por qué nos resulta útil que un objeto o artefacto sea inmutable?</strong> Porque cuando lo copiamos —por ejemplo, desde un entorno de desarrollo a la producción— ya sabemos cómo se va a comportar. No solo el artefacto tiene que ser inmutable para que funcione bien en todos los entornos, o ambientes, sino también la infraestructura. ¡Veámoslo en un ejemplo!</p>
     <br>
 
     <iframe src="https://benjumeacarlos981.github.io/glosariodeterminos/infraIIpipelinebuildPrincipioInmutabilidadDockerPPt.pdf" id="BasiBlockIframe756a6e59-d57b-4516-8325-5ef2f56a52c7" class="basic-block-content__content" width="100%" height="538vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
-
+    <br>
   </div>
 </body>
 </html>
