--- a/InfraIIPipelinesCDeliveryElprocesoRelease.html
+++ b/InfraIIPipelinesCDeliveryElprocesoRelease.html
@@ -56,7 +56,7 @@
     <br>
     <p>¡A jugar!</p>
 
-        <iframe src="https://benjumeacarlos981.github.io/glosariodeterminos/InfraIIEjercitacionCircuitodeCDpipelineProcesorelease.pdf" id="BasiBlockIframe756a6e59-d57b-4516-8325-5ef2f56a52c7" class="basic-block-content__content" width="100%" height="800vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
+        <iframe src="https://manzjulio064.github.io/glosariodeterminos/InfraIIEjercitacionCircuitodeCDpipelineProcesorelease.pdf" id="BasiBlockIframe756a6e59-d57b-4516-8325-5ef2f56a52c7" class="basic-block-content__content" width="100%" height="800vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
 <br>
 <br>
 <br>
