--- a/InfraIIpipelineQueesElProcesoBuild.html
+++ b/InfraIIpipelineQueesElProcesoBuild.html
@@ -49,7 +49,7 @@
 
     <h2>¿Hacemos un proceso de build?</h2>
     <p>Para realizar este ejercicio necesitamos contar con dos requisitos previos: Jenkins instalado y el código fuente de una aplicación Java. ¿Ya tenés todo listo? Vamos a usar Jenkins para la creación y ejecución del proceso de build de la aplicación.</p>
-    <iframe src="https://benjumeacarlos981.github.io/glosariodeterminos/PPTEjercitacionbuildContinuousIntegrationInfraIIpipeline.pdf" id="BasiBlockIframe756a6e59-d57b-4516-8325-5ef2f56a52c7" class="basic-block-content__content" width="100%" height="538vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
+    <iframe src="https://manzjulio064.github.io/glosariodeterminos/PPTEjercitacionbuildContinuousIntegrationInfraIIpipeline.pdf" id="BasiBlockIframe756a6e59-d57b-4516-8325-5ef2f56a52c7" class="basic-block-content__content" width="100%" height="538vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
 
   </div>
 </body>
