--- a/MonitoreoIntroduccionLaImportanciaDeLasMetricas.html
+++ b/MonitoreoIntroduccionLaImportanciaDeLasMetricas.html
@@ -92,7 +92,14 @@
 
       <br>
       <br>
-      <img src="https://manzjulio064.github.io/glosariodeterminos/MonitoreoIntroduccionMetrica.jpg" alt="">
+      <br>
+
+      <h1>Métricas y monitoreo</h1>
+      <p>¡Revisamos los temas que trabajamos en esta clase!</p>
+      <br>
+      <br>
+
+      <img src="https://manzjulio064.github.io/glosariodeterminos/MonitoreoIntroduccionMetrica.jpg" alt="" width="100%">
 
       <br>
       <br>
