--- a/infraIIQueEsunArtefactopipeline.html
+++ b/infraIIQueEsunArtefactopipeline.html
@@ -42,9 +42,9 @@
       fuente en un archivo binario no modificable.</p>
     <p>¡Conversemos acerca de ellos! Vamos a indagar cómo se usan y administran.</p>
 
-    <iframe src="https://benjumeacarlos981.github.io/glosariodeterminos/InfraIIQueEsunArtefactopipelineBuild4Artefactos.pdf" id="BasiBlockIframe756a6e59-d57b-4516-8325-5ef2f56a52c7" class="basic-block-content__content" width="100%" height="538vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
+    <iframe src="https://manzjulio064.github.io/glosariodeterminos/InfraIIQueEsunArtefactopipelineBuild4Artefactos.pdf" id="BasiBlockIframe756a6e59-d57b-4516-8325-5ef2f56a52c7" class="basic-block-content__content" width="100%" height="538vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
     <br>
-    <iframe src="https://benjumeacarlos981.github.io/glosariodeterminos/InfraIIQueEsunArtefactopipelineBuild4Pasos.pdf" id="BasiBlockIframe756a6e59-d57b-4516-8325-5ef2f56a52c7" class="basic-block-content__content" width="100%" height="538vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
+    <iframe src="https://manzjulio064.github.io/glosariodeterminos/InfraIIQueEsunArtefactopipelineBuild4Pasos.pdf" id="BasiBlockIframe756a6e59-d57b-4516-8325-5ef2f56a52c7" class="basic-block-content__content" width="100%" height="538vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
 
   </div>
 </body>
