--- a/C5SSprint1RefinamientoEspecializacion.html
+++ b/C5SSprint1RefinamientoEspecializacion.html
@@ -38,7 +38,7 @@
     <p>En nuestra primera sesión de refinamiento, nos concentraremos en pulir y clarificar las historias de usuario y los elementos del backlog para nuestro segundo sprint. Esto incluirá asegurarnos de que los requisitos estén bien definidos y de que las tareas estén alineadas con los objetivos del proyecto. Esta etapa será crucial para establecer una base sólida para el sprint que está por comenzar.</p>
 <br>
 <br>
-    <iframe src="https://benjumeacarlos981.github.io/glosariodeterminos/C5SSprint1RefinamientoEspecializacion.pdf" id="BasiBlockIframe756a6e59-d57b-4516-8325-5ef2f56a52c7" class="basic-block-content__content" width="100%" height="800vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
+    <iframe src="https://manzjulio064.github.io/glosariodeterminos/C5SSprint1RefinamientoEspecializacion.pdf" id="BasiBlockIframe756a6e59-d57b-4516-8325-5ef2f56a52c7" class="basic-block-content__content" width="100%" height="800vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
 <br>
 <br>
 <br>
