deployando gh-pages

--- a/POPAtributosResponsabilidadesConstructorJava.html
+++ b/POPAtributosResponsabilidadesConstructorJava.html
@@ -100,11 +100,13 @@
     <br>
     <br>
 
-    <div class="block-box"><div><h2 class="block-box__title">Como encontrar atributos y metodos en los objetos</h2><iframe src="https://drive.google.com/file/d/18chR-LRTKEXKO5McQdeESrtzSpo0UKAW/preview?usp=sharing" allowfullscreen="" title="BlockIframe" class="pdf-block__content"></iframe></div></div>
+    <div class="block-box"><div><h2 class="block-box__title">Como encontrar atributos y metodos en los objetos</h2>
+
+      <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPDescubriendoObjetosJava.pdf" id="BasiBlockIframe756a6e59-d57b-4516-8325-5ef2f56a52c7" class="basic-block-content__content" width="100%" height="800vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
 
     <br>
 
-    <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPDescubriendoObjetosJava.pdf" id="BasiBlockIframe756a6e59-d57b-4516-8325-5ef2f56a52c7" class="basic-block-content__content" width="100%" height="800vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
+
 
     <br>
     <br>
