--- a/POPDiagramaUMLJava.html
+++ b/POPDiagramaUMLJava.html
@@ -60,6 +60,11 @@
           --tw-text-opacity: 1;
           color: rgb(0 0 0 / var(--tw-text-opacity));
       }
+
+      img, video {
+          max-width: 100%;
+          height: auto;
+      }
   </style>
 
 </head>
