deployando gh-pages

--- a/POPCierreSemanaC6AJava.html
+++ b/POPCierreSemanaC6AJava.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cierre Semana</title>
+    <title> C6A - Cierre de la semana</title>
 
     <style>
 
@@ -86,15 +86,12 @@
   <div class="contenedor">
     <br>
     <br>
-    <div class="block-box"><div>
-      <h2 class="block-box__title">Ejercicio mesa de trabajo</h2>
-      <iframe src="https://drive.google.com/file/d/1sE0GlSIt_BVU_i03Oo7KcRZliwoUPcEJ/preview?usp=sharing" allowfullscreen="" title="BlockIframe" class="pdf-block__content slide-block__content"></iframe></div></div>
-
-    <br>
-    <br>
-
-    <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPEjercicioMesaTrabajoC4.pdf" allowfullscreen="" title="BlockIframe" class="slide-block__content">
-    </iframe>
+    <div class="block-box"><div><div class="text-block__content"><div>
+      <p>
+        En estas dos últimas clases comenzamos a aprender a modelar una clase de objeto, pero incluso antes de eso tuvimos que entender qué era un objeto. Luego empezó el gran desafío de cómo programar una clase en Java, sus modificadores de acceso, como describir sus atributos y responsabilidades. <br>
+        En el encuentro presencial vamos a ver tanto el modelado de una clase como su implementación y analizaremos cómo se relacionan estos dos elementos. ¡Nos vemos en clase!
+      </p>
+  </div></div></div></div>
 
     <br>
     <br>
