--- a/POPC7SRelacionesentreclasesClaseenVivo.html
+++ b/POPC7SRelacionesentreclasesClaseenVivo.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-
     .contenedor {
       margin-left: 10em;
       margin-right: 10em;
@@ -76,19 +75,56 @@
         display: block;
         vertical-align: middle;
     }
+    @media (min-width: 1500px) {
+    .layout_narrow {
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+    }
+    .layout_narrow {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    max-width: 80rem;
+    padding-top: 0;
+    padding-bottom: 0;
+    }
+    .mb-6 {
+    margin-bottom: 1.5rem;
+    }
+    .information-module {
+    display: flex;
+    flex-direction: column;
+    border-radius: .75rem;
+    --tw-bg-opacity: 1;
+    background-color: rgb(203 203 203 / var(--tw-bg-opacity));
+    padding: 1.5rem 2rem;
+    }
+    .information-module__header {
+    margin-bottom: 1.5rem;
+    display: flex;
+    flex: 1 1 0%;
+    align-items: center;
+    justify-content: space-between;
+    }
+    @media (min-width: 768px) {
+    .information-module__content {
+        flex-direction: row;
+    }
+}
+    .information-module__content {
+    display: flex;
+    flex-direction: column;
+  }
+
   </style>
 
-  <title>Agregación</title>
+  <title>Clase en vivo</title>
 </head>
 <body>
-  <br>
-
-  <div class="block-box"><div><h2 class="block-box__title">Agregación</h2><iframe src="https://manzjulio064.github.io/glosariodeterminos/POPRelacionesentreclaseAgregacionJava.pdf" id="BasiBlockIframe756a6e59-d57b-4516-8325-5ef2f56a52c7" class="basic-block-content__content" width="100%" height="800vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe></div></div>
-  <br>
-  <div class="block-box"><div><h2 class="block-box__title">EJercicio</h2><iframe src="https://manzjulio064.github.io/glosariodeterminos/POPRelaciondeClasesEjercitacionModeladoRelacionesJava.pdf" id="BasiBlockIframe756a6e59-d57b-4516-8325-5ef2f56a52c7" class="basic-block-content__content" width="100%" height="800vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe></div></div>
-  <br>
 
   <br>
+  <div class="block-box"><div><h2 class="block-box__title"></h2><iframe src="https://manzjulio064.github.io/glosariodeterminos/POPC7SRelacionesentreclasesClaseenVivo.pdf" id="BasiBlockIframe756a6e59-d57b-4516-8325-5ef2f56a52c7" class="basic-block-content__content" width="100%" height="800vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe></div></div>
   <br>
 
 </body>
