--- a/POPRepresentacionesUmlDeLasRelacionesComposicionJava.html
+++ b/POPRepresentacionesUmlDeLasRelacionesComposicionJava.html
@@ -82,9 +82,10 @@
 </head>
 <body>
   <br>
-  <div class="block-box"><div><h2 class="block-box__title">Composición</h2><iframe src="https://manzjulio064.github.io/glosariodeterminos/POPRelacionesdeClasesComposicionJava.pdf" allowfullscreen="" title="BlockIframe" class="pdf-block__content"></iframe></div></div>
+  <div class="block-box"><div><h2 class="block-box__title">Composición</h2><iframe src="https://manzjulio064.github.io/glosariodeterminos/POPRelacionesdeClasesComposicionJava.pdf" id="BasiBlockIframe756a6e59-d57b-4516-8325-5ef2f56a52c7" class="basic-block-content__content" width="100%" height="800vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe></div></div>
   <br>
-  <div class="block-box"><div><h2 class="block-box__title"> EJercicio</h2><iframe src="https://manzjulio064.github.io/glosariodeterminos/POPEjercitacionModeladoRelacionesComposicionJava.pdf" allowfullscreen="" title="BlockIframe" class="pdf-block__content"></iframe></div></div>
+  <div class="block-box"><div><h2 class="block-box__title">EJercicio</h2><iframe src="https://manzjulio064.github.io/glosariodeterminos/POPEjercitacionModeladoRelacionesComposicionJava.pdf" id="BasiBlockIframe756a6e59-d57b-4516-8325-5ef2f56a52c7" class="basic-block-content__content" width="100%" height="800vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe></div></div>
+
   <br>
   <br>
 
