--- a/POPRepresentacionesUmlDeLasRelacionesImplementacionJava.html
+++ b/POPRepresentacionesUmlDeLasRelacionesImplementacionJava.html
@@ -75,6 +75,47 @@
         display: block;
         vertical-align: middle;
     }
+    @media (min-width: 1500px) {
+    .layout_narrow {
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+    }
+    .layout_narrow {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    max-width: 80rem;
+    padding-top: 0;
+    padding-bottom: 0;
+    }
+    .mb-6 {
+    margin-bottom: 1.5rem;
+    }
+    .information-module {
+    display: flex;
+    flex-direction: column;
+    border-radius: .75rem;
+    --tw-bg-opacity: 1;
+    background-color: rgb(203 203 203 / var(--tw-bg-opacity));
+    padding: 1.5rem 2rem;
+    }
+    .information-module__header {
+    margin-bottom: 1.5rem;
+    display: flex;
+    flex: 1 1 0%;
+    align-items: center;
+    justify-content: space-between;
+    }
+    @media (min-width: 768px) {
+    .information-module__content {
+        flex-direction: row;
+    }
+}
+    .information-module__content {
+    display: flex;
+    flex-direction: column;
+  }
 
   </style>
 
@@ -87,7 +128,7 @@
   <div class="layout layout_narrow"><div class="mb-6"><div class="information-module"><div class="information-module__header"><span class="information-module__header-title">Ejercicio</span><div class="flex gap-2 items-center"><div class="badge badge-lg badge-success">Aprobado</div></div></div><div class="information-module__content"><div class="information-module__instructions"><div><p class="information-module__instructions-title">Instrucciones</p><div class="information-module__instructions-description"><div><p>Es momento de asociar nuestra clase Cliente con nuestra clase Cuenta.&nbsp;</p><p><span style="font-family: var(--primary-font);">En otro archivo ya tenemos una clase Cliente con sus atributos y responsabilidades , </span><span style="font-family: var(--primary-font);">&nbsp;nuestra clase Cuenta debe tener un atributo titular de tipo Cliente.</span></p><p>Les pedimos que modifiquen la Clase Cuenta para que tenga un Cliente. El constructor de la clase Cuenta recibe además de los valores que ya tiene un Cliente.</p><p></p><div><br><br></div><p></p></div></div></div></div><div class="information-module__clues"><div><p class="information-module__clues-title">Pistas</p><p class="information-module__clues-description"></p><div class="flex items-center"><div class="flex-1"><div class="accordion" data-testid="accordion"><div class="accordion__info" data-testid="accordion-info"><span class="accordion__info-col"><span class="dh-text-accent-royal-velvet-primary"><i data-testid="icon" class="uil icon uil-lightbulb-alt icon_md"></i></span><span class="accordion__title">Pista 1</span></span><span class="accordion__info-col accordion__info-col_right"><span class="accordion__arrow"><i data-testid="icon" class="uil icon uil-eye-slash icon_md"></i></span></span></div><div class="accordion__topics accordion__topics_opened"><div class="accordion__content accordion__content_opened"><div class="px-8">No te olvides que Java es un lenguaje fuertemente tipado.</div></div></div></div></div></div></div></div></div></div></div></div>
 
   <br>
-  <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPRelacionesdeClasesImplementacionJava.jpg" allowfullscreen="" title="BlockIframe" class="pdf-block__content"></iframe>
+  <div class="block-box"><div><h2 class="block-box__title"></h2><iframe src="https://manzjulio064.github.io/glosariodeterminos/POPRelacionesdeClasesImplementacionJava.jpg" id="BasiBlockIframe756a6e59-d57b-4516-8325-5ef2f56a52c7" class="basic-block-content__content" width="100%" height="800vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe></div></div>
   <br>
 
 </body>
