deployando gh-pages

--- a/POPHerenciaUMLFirmadeunmetodoJava.html
+++ b/POPHerenciaUMLFirmadeunmetodoJava.html
@@ -131,18 +131,31 @@
 
   </style>
 
-  <title>Clase en vivo</title>
+  <title>Firma de un método</title>
 </head>
 <body>
+  <div class="contenedor">
+    <div class="block-box"><div><div class="text-block__content">
+      <div>
+      <h2>La firma de un método</h2>
 
-  <br>
-  <div class="block-box">
-    <div class="xx">
-      <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPC7SRelacionesentreclasesClaseenVivo.pdf" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
-      <br>
-    </div>
+      <p>En términos generales, una firma nos permite identificarnos y expresar nuestro consentimiento de un determinado documento. En nuestro documento de identidad podemos encontrar muchos elementos, entre ellos está la firma o rúbrica.</p><br>
+
+      <p>Con esta idea vamos a abordar la firma de un método en la programación orientada a objetos, que no es ni más ni menos que la definición completa de un método, es decir, su nombre, sus parámetros y sus tipos y el orden de aparición de dichos parámetros. </p><br>
+
+      <p>No podrán en una misma clase existir dos métodos con la misma firma, es decir, con el mismo nombre y cantidad de parámetros con sus respectivos tipos en el mismo orden. Decimos, entonces, que los siguientes métodos tienen diferentes firmas, son métodos diferentes porque, si bien se llaman igual, tienen diferente cantidad de parámetros o difiere alguno de sus tipos:</p><br>
+
+      <p>+ sumar(numero1: double, numero2: double): double</p><br>
+
+      <p>+ sumar(numero1: double, numero2: double, numero3: double): double </p><br>
+
+      <p>+ sumar(numero1: int, numero2: int): int</p><br>
+
+      <img alt="Hombre de negocios" src="https://assets.digitalhouse.com/content/ar/td/poo/Hombre-de-NegociosC8A.jpg">
+      </div></div></div></div>
+
+
   </div>
-  <br>
 
 </body>
 </html>
