--- a/POPHerenciaUMLHerenciaJava.html
+++ b/POPHerenciaUMLHerenciaJava.html
@@ -131,18 +131,37 @@
 
   </style>
 
-  <title>Clase en vivo</title>
+  <title>Herencia</title>
 </head>
 <body>
-
-  <br>
-  <div class="block-box">
-    <div class="xx">
-      <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPC7SRelacionesentreclasesClaseenVivo.pdf" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
-      <br>
+  <div class="contenedor">
+    <br>
+    <div class="block-box">
+      <div class="xx">
+        <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPHerenciaUMLHerenciaJava.pdf" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
+        <br>
+      </div>
     </div>
-  </div>
-  <br>
+    <br>
+    <!-- ----------------------------------- -->
+    <div class="block-box">
+      <div class="xx">
+        <iframe src="https://view.genial.ly/60c153221f2fc20d9c415ed8" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
+        <br>
+      </div>
+    </div>
+    <br>
+    <!-- ----------------------------------- -->
+    <br>
+    <div class="block-box">
+      <div class="xx">
+        <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPHerenciaUMLEjercitacionModeladoHerenciaInicial.pdf" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
+        <br>
+      </div>
+    </div>
+    <br>
 
+
+  </div>
 </body>
 </html>
