--- a/POPHerenciaUMLRelacionesentreclasesJava.html
+++ b/POPHerenciaUMLRelacionesentreclasesJava.html
@@ -131,18 +131,21 @@
 
   </style>
 
-  <title>Clase en vivo</title>
+  <title>Relaciones entre clases</title>
 </head>
 <body>
+  <div class="contenedor">
+    <br>
+    <div class="block-box"><div><div class="text-block__content">
+      <div>
+      <h2>Nos resta ver un tipo de relación más...</h2>
+      <p>Hasta aquí estudiamos que para comenzar a resolver un problema utilizando el paradigma de objetos, debemos pasar por un proceso para identificar los objetos al que podemos llamar proceso de abstracción. Durante este, no solo identificamos las partes que integran nuestro “universo” o “dominio” según el contexto, sino cómo interactúan esas partes a través de <span>relaciones</span>. Es así como llegamos a definir <span>clases</span>, con sus <span>atributos</span> y operaciones. Además, definimos qué debe hacer cada parte para contribuir a la solución del problema, es decir, establecimos las <span>responsabilidades</span> de las clases. En esta clase veremos la relación de herencia y sus beneficios.</p>
+      </div>
+    </div></div></div>
+    <div style="padding:62.5% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/945535416?h=66e44db6f3&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="POPHerenciaUMLHerenciaJavaVideo"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+    <br>
 
-  <br>
-  <div class="block-box">
-    <div class="xx">
-      <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPC7SRelacionesentreclasesClaseenVivo.pdf" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
-      <br>
-    </div>
+
   </div>
-  <br>
-
 </body>
 </html>
