--- a/POPHerenciaUMLSobrecargaySobreescrituraJava.html
+++ b/POPHerenciaUMLSobrecargaySobreescrituraJava.html
@@ -131,18 +131,28 @@
 
   </style>
 
-  <title>Clase en vivo</title>
+  <title>Sobrecarga y Sobreescritura</title>
 </head>
 <body>
-
-  <br>
-  <div class="block-box">
-    <div class="xx">
-      <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPC7SRelacionesentreclasesClaseenVivo.pdf" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
-      <br>
+  <div class="contenedor">
+    <br>
+    <div class="block-box">
+      <div class="xx">
+        <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPHerenciaUMLSobrecargaySobreescrituraJava.pdf" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
+        <br>
+      </div>
     </div>
-  </div>
-  <br>
+    <br>
+    <br>
+    <div class="block-box">
+      <div class="xx">
+        <iframe src="https://docs.google.com/document/d/1z5HbbkjsGZqS6IHZ_WE4Hd1mk58SoLU9/preview" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
+        <br>
+      </div>
+    </div>
+    <br>
 
+
+  </div>
 </body>
 </html>
