deployando gh-pages

--- a/POPC8SHerenciaenUML.html
+++ b/POPC8SHerenciaenUML.html
@@ -131,27 +131,24 @@
 
   </style>
 
-  <title>Alcance, protected</title>
+  <title>Clase en vivo</title>
 </head>
 <body>
   <div class="contenedor">
     <br>
-    <!-- --------------------------------- -->
-    <div class="block-box"><div><div class="text-block__content">
-      <div>
-
-      <h2>Encapsulamiento y la herencia</h2>
-      <p>Ahora que ya aprendimos a modelar relaciones de herencia y tenemos en claro el concepto de encapsulamiento, analizaremos cómo se comporta la herencia frente al encapsulamiento. </p><br>
-      <p>Recordemos que cuando una propiedad es <span>pública</span> significa que es accesible desde cualquier clase. Es decir, en el momento en que un objeto quiera acceder a un valor público puede obtenerlo y modificarlo sin ninguna operación de por medio. Esto sería el equivalente a no ocultar información y, por lo tanto, “romper” el encapsulamiento.</p><br>
-      <p>Por el contrario, si declaramos un atributo <span>privado</span> limitamos completamente el acceso al dato. Nadie que no sea la propia clase puede acceder a ese dato. Siempre que se quiera acceder o modificar el dato, se debe hacer una operación para tal fin, por ejemplo, a través de getters o setters.</p><br>
-      <p>Con la herencia aparece un modificador de visibilidad nuevo llamado <span>protegido</span>, que en los diagramas UML se especifica con el “#”, donde nos permite tener una visibilidad intermedia del atributo o método al que declaramos como tal. Es decir, es privado para otras clases, pero público para las clases hijas. El uso de este modificador de visibilidad “rompe” el encapsulamiento y evitaremos en lo posible su uso como buena práctica. </p><br>
-      <p>Veamos esto en el siguiente ejemplo gráfico:</p><br>
-      <div style="width: 100%;"><div style="position: relative; padding-bottom: 61.36%; padding-top: 0; height: 0;"><iframe scrolling="yes" allowfullscreen="true" src="https://view.genial.ly/60c13148ddae960d163e85a6" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" height="675" width="1100" frameborder="0"></iframe> </div> </div>
-
-
-      </div></div></div></div>
-    <!-- --------------------------------- -->
+    <div class="block-box">
+      <div class="xx">
+        <br>
+        <h1>Ejercicio mesa de trabajo</h1>
+        <br>
+        <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPC8SHerenciaenUML.pdf" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
+        <br>
+      </div>
+    </div>
     <br>
+
+    <br>
+
 
   </div>
 </body>
