--- a/POPC9ACierredelasemanaJava.html
+++ b/POPC9ACierredelasemanaJava.html
@@ -131,27 +131,31 @@
 
   </style>
 
-  <title>Alcance, protected</title>
+  <title>Cierre de la semana</title>
 </head>
 <body>
   <div class="contenedor">
+
     <br>
-    <!-- --------------------------------- -->
+    <br>
+    <br>
+    <br>
+
     <div class="block-box"><div><div class="text-block__content">
       <div>
+      <p>Luego de recorrer las dos clases de esta semana, en este encuentro les proponemos integrar los contenidos vistos anteriormente:</p>
+      <ul>
+      <li style="font-size:16px">
+      Relaciones entre clases</li>
+      <li style="font-size:16px">
+      Herencias en UML</li>
+      </ul>
+      <p>¡Recuerden que ante cualquier consulta estamos para ayudarlos! </p>
+      <ul>
 
-      <h2>Encapsulamiento y la herencia</h2>
-      <p>Ahora que ya aprendimos a modelar relaciones de herencia y tenemos en claro el concepto de encapsulamiento, analizaremos cómo se comporta la herencia frente al encapsulamiento. </p><br>
-      <p>Recordemos que cuando una propiedad es <span>pública</span> significa que es accesible desde cualquier clase. Es decir, en el momento en que un objeto quiera acceder a un valor público puede obtenerlo y modificarlo sin ninguna operación de por medio. Esto sería el equivalente a no ocultar información y, por lo tanto, “romper” el encapsulamiento.</p><br>
-      <p>Por el contrario, si declaramos un atributo <span>privado</span> limitamos completamente el acceso al dato. Nadie que no sea la propia clase puede acceder a ese dato. Siempre que se quiera acceder o modificar el dato, se debe hacer una operación para tal fin, por ejemplo, a través de getters o setters.</p><br>
-      <p>Con la herencia aparece un modificador de visibilidad nuevo llamado <span>protegido</span>, que en los diagramas UML se especifica con el “#”, donde nos permite tener una visibilidad intermedia del atributo o método al que declaramos como tal. Es decir, es privado para otras clases, pero público para las clases hijas. El uso de este modificador de visibilidad “rompe” el encapsulamiento y evitaremos en lo posible su uso como buena práctica. </p><br>
-      <p>Veamos esto en el siguiente ejemplo gráfico:</p><br>
-      <div style="width: 100%;"><div style="position: relative; padding-bottom: 61.36%; padding-top: 0; height: 0;"><iframe scrolling="yes" allowfullscreen="true" src="https://view.genial.ly/60c13148ddae960d163e85a6" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" height="675" width="1100" frameborder="0"></iframe> </div> </div>
+      </ul></div></div></div></div>
 
 
-      </div></div></div></div>
-    <!-- --------------------------------- -->
-    <br>
 
   </div>
 </body>
