deployando gh-pages

--- a/POPC11AConceptoClaseAbstractaJava.html
+++ b/POPC11AConceptoClaseAbstractaJava.html
@@ -132,26 +132,25 @@
 
   </style>
 
-  <title>Ejemplo de codigo</title>
+  <title>Concepto de Clase abstracta</title>
 </head>
 <body>
   <div class="contenedor">
     <br>
+    <div class="block-box"><div><div class="text-block__content"><div>
+      <h2>Las clases abstractas</h2>
+      <p>
+          Existirán ocasiones en las que necesitaremos modelar clases, pero que las mismas estarán incompletas. Es decir, que se terminan de implementar en las subclases porque es en ellas donde tienen la implementación específica. Estas las llamamos <span>clases abstractas</span> y vamos a ver sus características durante esta clase.
+      </p>
+  </div></div></div></div>
+    <br>
     <div class="block-box">
       <div class="xx">
         <br>
-        <h1>Ejemplo de codigo</h1>
+        <h1>Clase abstracta</h1>
         <br>
-        <div class="block-box"><div><div class="text-block__content"><div>
-          <p>
-              Por otro lado, aquí les dejamos el código del ejemplo con que se trabajó en las clases para que puedas utilizarlo cuando lo necesites: <br>
-              <a href="https://drive.google.com/file/d/1jnYshOfs_pj0nr6AP6njLDmUX793GKLE/view?usp=sharing">https://drive.google.com/file/d/1jnYshOfs_pj0nr6AP6njLDmUX793GKLE/view?usp=sharing</a>
-          </p>
-      </div></div></div></div>
         <br>
-        <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPC10AEjemplodecodigoJava.pdf" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
-        <br>
-        <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPC10AEjemplodecodigoJavacodigo.txt" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
+        <div style="padding:59.4% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/949385293?h=54c35ec8f7&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="POPC11AConceptoClaseAbstractaJava"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
         <br>
       </div>
     </div>
