--- a/POPC11APolimorfismoJava.html
+++ b/POPC11APolimorfismoJava.html
@@ -132,7 +132,7 @@
 
   </style>
 
-  <title>Ejemplo de codigo</title>
+  <title>Polimorfismo</title>
 </head>
 <body>
   <div class="contenedor">
@@ -140,18 +140,13 @@
     <div class="block-box">
       <div class="xx">
         <br>
-        <h1>Ejemplo de codigo</h1>
+        <h1>Sobre carga y sobre escritura</h1>
         <br>
-        <div class="block-box"><div><div class="text-block__content"><div>
-          <p>
-              Por otro lado, aquí les dejamos el código del ejemplo con que se trabajó en las clases para que puedas utilizarlo cuando lo necesites: <br>
-              <a href="https://drive.google.com/file/d/1jnYshOfs_pj0nr6AP6njLDmUX793GKLE/view?usp=sharing">https://drive.google.com/file/d/1jnYshOfs_pj0nr6AP6njLDmUX793GKLE/view?usp=sharing</a>
-          </p>
-      </div></div></div></div>
         <br>
-        <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPC10AEjemplodecodigoJava.pdf" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
+        <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPC10ASobrecargaSobrescrituraJava.pdf" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
         <br>
-        <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPC10AEjemplodecodigoJavacodigo.txt" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
+        <br>
+        <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPC10ASobrecargaSobrescrituraPracticaCodigoJava.pdf" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
         <br>
       </div>
     </div>
