--- a/POPC11AUsoClasesAbstractasDisenoJava.html
+++ b/POPC11AUsoClasesAbstractasDisenoJava.html
@@ -132,27 +132,27 @@
 
   </style>
 
-  <title>Ejemplo de codigo</title>
+  <title>Uso de clases abstractas en el diseño</title>
 </head>
 <body>
   <div class="contenedor">
     <br>
+    <div class="block-box"><div><div class="text-block__content"><div>
+      <h2>¿Cómo las modelamos?</h2>
+      <p>
+          Aprendimos a modelar clases, luego a relacionarlas. Finalmente, estudiamos que también podían existir relaciones de herencia entre ellas. Veamos ahora con más profundidad cómo representar las clases abstractas para nuestros diseños en UML.
+      </p>
+  </div></div></div></div>
+    <br>
     <div class="block-box">
       <div class="xx">
         <br>
-        <h1>Ejemplo de codigo</h1>
+        <h1>Clases abstractas en UML</h1>
         <br>
-        <div class="block-box"><div><div class="text-block__content"><div>
-          <p>
-              Por otro lado, aquí les dejamos el código del ejemplo con que se trabajó en las clases para que puedas utilizarlo cuando lo necesites: <br>
-              <a href="https://drive.google.com/file/d/1jnYshOfs_pj0nr6AP6njLDmUX793GKLE/view?usp=sharing">https://drive.google.com/file/d/1jnYshOfs_pj0nr6AP6njLDmUX793GKLE/view?usp=sharing</a>
-          </p>
-      </div></div></div></div>
         <br>
-        <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPC10AEjemplodecodigoJava.pdf" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
+        <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPC11AUsoClasesAbstractasDisenoJava.pdf" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
         <br>
-        <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPC10AEjemplodecodigoJavacodigo.txt" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
-        <br>
+          <br>
       </div>
     </div>
     <br>
