--- a/POPC11AMetodosAbstractosJava.html
+++ b/POPC11AMetodosAbstractosJava.html
@@ -234,7 +234,7 @@
       </div>
     </div>
     <br>
-    <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPC11AMetodosAbstractosJavaPracticaCodigo" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
+    <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPC11AMetodosAbstractosJavaPracticaCodigo.pdf" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
   <br>
   <div class="block-box">
     <div class="xx">
