--- a/POPC15AEvaluacionJava.html
+++ b/POPC15AEvaluacionJava.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Preparándonos para el parcial</title>
+    <title>Criterios de evaluación</title>
     <style>
         body {
             display: flex;
@@ -34,8 +34,8 @@
 </head>
 <body>
     <div class="container">
-        <h2>Consigna</h2>
-        <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPC14SIntegradora.pdf" frameborder="0" width="100%" height="400vh" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen=""></iframe>
+        <h2>Criterios de evaluación</h2>
+        <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPC15AEvaluacionJava.pdf" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
 
     </div>
 </body>
