deployando gh-pages

--- a/C16SColeccionesConsignaClaseEnVivo.html
+++ b/C16SColeccionesConsignaClaseEnVivo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tipos en la definición de colecciones (genéricos)</title>
+    <title>Clase en vivo</title>
     <style>
         body {
             display: flex;
@@ -39,12 +39,8 @@
 <body>
     <div class="container">
       <div class="x">
-        <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPC16ATiposDefinicionColeccionesJavaGenerics.pdf" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
-      </div>
-      <br>
-      <div class="x">
-        <h2>Colecciones paramétricas</h2>
-        <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPC16ATiposDefinicionColeccionesJavaColeccionesParametricas.pdf" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
+        <h2>Consigna para le mesa de trabajo</h2>
+        <iframe src="https://manzjulio064.github.io/glosariodeterminos/C16SColeccionesConsignaClaseEnVivo.pdf" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
       </div>
       <br>
       <br>
