--- a/C19AConceptoPatronesDiseno.html
+++ b/C19AConceptoPatronesDiseno.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://manzjulio064.github.io/glosariodeterminos/d48865cf5505cebc.css">
-    <title>Clase en vivo</title>
+    <title>Concepto de Patrones de Diseño</title>
     <style>
         body {
             display: flex;
@@ -41,9 +40,15 @@
     <div class="container">
       <br>
       <div class="x">
-        <h2>Consigna para pg</h2>
-        <iframe src="https://manzjulio064.github.io/glosariodeterminos/C17SManejoExcepcionesClaseEnVivo.pdf" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
+        <h2>Composición y herencia</h2>
+        <iframe src="https://manzjulio064.github.io/glosariodeterminos/C19AConceptoPatronesDisenoComposiciónherencia.pdf" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
       </div>
+      <br>
+      <div class="x">
+        <h2>Patrones de diseño</h2>
+        <iframe src="https://manzjulio064.github.io/glosariodeterminos/C19AConceptoPatronesDisenoComposiciónherenciaPatron.pdf" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
+      </div>
+      <br>
       <br>
     </div>
 </body>
