--- a/C19APatronesdeDiseñoIntroduccionJava.html
+++ b/C19APatronesdeDiseñoIntroduccionJava.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://manzjulio064.github.io/glosariodeterminos/d48865cf5505cebc.css">
-    <title>Clase en vivo</title>
+    <title>Patrones</title>
     <style>
         body {
             display: flex;
@@ -41,8 +40,8 @@
     <div class="container">
       <br>
       <div class="x">
-        <h2>Consigna para pg</h2>
-        <iframe src="https://manzjulio064.github.io/glosariodeterminos/C17SManejoExcepcionesClaseEnVivo.pdf" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
+        <h2>Introducción a patrones de diseño</h2>
+        <div style="padding:59.4% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/952160536?h=c21ab01ff6&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="C19APatronesdeDiseñoIntroduccionJava"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
       </div>
       <br>
     </div>
