deployando gh-pages

--- a/C22APatronCompositeConclusion.html
+++ b/C22APatronCompositeConclusion.html
@@ -41,8 +41,13 @@
     <div class="container">
       <br>
       <div class="x">
-        <h2>Consigna para pg</h2>
-        <iframe src="https://manzjulio064.github.io/glosariodeterminos/C17SManejoExcepcionesClaseEnVivo.pdf" width="100%" height="400vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
+        <h2>Live Coding Composite</h2>
+        <p>A continuación te invitamos a ver el siguiente live coding donde mostramos paso a paso cómo programar el patrón composite.</p>
+      </div>
+      <br>
+      <div class="x">
+        <h2>Codificando Juntos - Patrón Composite</h2>
+        <div style="padding:59.4% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/952189617?h=7fcad147c0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="C22APatrónCompositeConclucion"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
       </div>
       <br>
     </div>
