--- a/BackEndIC3AIntegradoraI.html
+++ b/BackEndIC3AIntegradoraI.html
@@ -3,11 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://manzjulio064.github.io/glosariodeterminos/d48865cf5505cebc.css"
-      href="https://manzjulio064.github.io/glosariodeterminos/digitalhousecssstandar.css"
-    />
+    <link rel="stylesheet" href="https://manzjulio064.github.io/glosariodeterminos/d48865cf5505cebc.css">
+    <link rel="stylesheet" href="https://manzjulio064.github.io/glosariodeterminos/digitalhousecssstandar.css">
     <title>Clase integradora</title>
   </head>
   <body>
