deployando gh-pages

--- a/BackEndIC4SPatronCadenaResponsabilidad.html
+++ b/BackEndIC4SPatronCadenaResponsabilidad.html
@@ -54,6 +54,7 @@
               allowfullscreen=""
               title="BlockIframe"
               class="pdf-block__content"
+              class="responsive-iframe"
             ></iframe>
           </div>
         </div>
