deployando gh-pages

--- a/BackEndIC4SPatronCadenaResponsabilidad.html
+++ b/BackEndIC4SPatronCadenaResponsabilidad.html
@@ -47,8 +47,8 @@
             </button>
           </div>
         </div>
-        <div class="block-box x">
-          <div>
+        <div class="block-box x ">
+          <div class="zoom-container">
             <iframe
               src="https://docs.google.com/document/d/1_x59HD_gWqK1yjOI36rbPtXs-MtwEdu2/preview?usp=sharing"
               allowfullscreen=""
